--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                     <a class="text-white px-2" href="">
                         <i class="fab fa-facebook-f"></i>
                     </a>
-                <!--    <a class="text-white px-2" href="">
-                        <i class="fab fa-twitter"></i>
+                <!--<a class="text-white px-2" href="">
+                        <i class="fab fa-twitter"></i> 
                     </a> -->
                     <a class="text-white px-2" href="">
                         <i class="fab fa-linkedin-in"></i>
@@ -51,9 +51,9 @@
                     <a class="text-white px-2" href="https://www.instagram.com/?next=%2F">
                         <i class="fab fa-instagram"></i>
                     </a>
-                    <a class="text-white pl-2" href="">
+              <!--   <a class="text-white pl-2" href="">
                         <i class="fab fa-youtube"></i>
-                    </a>
+                    </a> -->
                 </div>
             </div>
         </div>
@@ -356,8 +356,8 @@
                                 <span>CHAIRMAN AND MANAGING DIRECTOR</span>
                             </div>
                             <div class="team-social d-flex align-items-center justify-content-center bg-primary">
-                                <a class="btn btn-outline-dark btn-social mr-2" href="#"><i
-                                        class="fab fa-twitter"></i></a>
+                          <!--  <a class="btn btn-outline-dark btn-social mr-2" href="#"><i
+                                        class="fab fa-twitter"></i></a> -->
                                 <a class="btn btn-outline-dark btn-social mr-2" href="#"><i
                                         class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-outline-dark btn-social mr-2" href="#"><i
@@ -376,8 +376,8 @@
                                 <span>MANAGING DIRECTOR</span>
                             </div>
                             <div class="team-social d-flex align-items-center justify-content-center bg-primary">
-                                <a class="btn btn-outline-dark btn-social mr-2" href="#"><i
-                                        class="fab fa-twitter"></i></a>
+                    <!--            <a class="btn btn-outline-dark btn-social mr-2" href="#"><i
+                                        class="fab fa-twitter"></i></a> -->
                                 <a class="btn btn-outline-dark btn-social mr-2" href="#"><i
                                         class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-outline-dark btn-social mr-2" href="#"><i
@@ -396,8 +396,8 @@
                                 <span>HEAD OF THE OPERATIONS</span>
                             </div>
                             <div class="team-social d-flex align-items-center justify-content-center bg-primary">
-                                <a class="btn btn-outline-dark btn-social mr-2" href="#"><i
-                                        class="fab fa-twitter"></i></a>
+                      <!--      <a class="btn btn-outline-dark btn-social mr-2" href="#"><i
+                                        class="fab fa-twitter"></i></a> -->
                                 <a class="btn btn-outline-dark btn-social mr-2" href="#"><i
                                         class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-outline-dark btn-social mr-2" href="#"><i
@@ -416,8 +416,8 @@
                                 <span>HEAD OF THE FINANCE</span>
                             </div>
                             <div class="team-social d-flex align-items-center justify-content-center bg-primary">
-                                <a class="btn btn-outline-dark btn-social mr-2" href="#"><i
-                                        class="fab fa-twitter"></i></a>
+                      <!--      <a class="btn btn-outline-dark btn-social mr-2" href="#"><i
+                                        class="fab fa-twitter"></i></a> -->
                                 <a class="btn btn-outline-dark btn-social mr-2" href="#"><i
                                         class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-outline-dark btn-social mr-2" href="#"><i
@@ -457,7 +457,7 @@
                         <p><i class="fa fa-phone-alt mr-2"></i>+91 9676927777</p>
                         <p><i class="fa fa-envelope mr-2"></i>info@joymercylogistics.com</p>
                         <div class="d-flex justify-content-start mt-4">
-                            <a class="btn btn-outline-light btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
+                     <!--   <a class="btn btn-outline-light btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a> -->
                             <a class="btn btn-outline-light btn-social mr-2" href="#"><i
                                     class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-outline-light btn-social mr-2" href="#"><i
