--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
                     <a class="text-white px-2" href="">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
-                    <a class="text-white px-2" href="">
+                    <a class="text-white px-2" href="https://instagram.com/joymercylogistics">
                         <i class="fab fa-instagram"></i>
                     </a>
                 <!--<a class="text-white pl-2" href="">
