--- a/about.html
+++ b/about.html
@@ -237,7 +237,7 @@
                <!--             <a class="btn btn-outline-dark btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a> -->
                                 <a class="btn btn-outline-dark btn-social mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-outline-dark btn-social mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                                <a class="btn btn-outline-dark btn-social" href="#"><i class="fab fa-instagram"></i></a>
+                                <a class="btn btn-outline-dark btn-social" href="https://instagram.com/prakash_vicky2804"><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
                     </div>
