--- a/blog.html
+++ b/blog.html
@@ -41,18 +41,18 @@
                     <a class="text-white px-2" href="">
                         <i class="fab fa-facebook-f"></i>
                     </a>
-                    <a class="text-white px-2" href="">
+            <!--    <a class="text-white px-2" href="">
                         <i class="fab fa-twitter"></i>
-                    </a>
+                    </a> -->
                     <a class="text-white px-2" href="">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
-                    <a class="text-white px-2" href="">
+                    <a class="text-white px-2" href="https://instagram.com/joymercylogistics">
                         <i class="fab fa-instagram"></i>
                     </a>
-                    <a class="text-white pl-2" href="">
+           <!--     <a class="text-white pl-2" href="">
                         <i class="fab fa-youtube"></i>
-                    </a>
+                    </a> -->
                 </div>
             </div>
         </div>
@@ -348,7 +348,7 @@
                         <p><i class="fa fa-phone-alt mr-2"></i>+91 9676927777</p>
                         <p><i class="fa fa-envelope mr-2"></i>info@joymercylogistics.com</p>
                         <div class="d-flex justify-content-start mt-4">
-                            <a class="btn btn-outline-light btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
+                  <!--      <a class="btn btn-outline-light btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a> -->
                             <a class="btn btn-outline-light btn-social mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-outline-light btn-social mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
                             <a class="btn btn-outline-light btn-social" href="#"><i class="fab fa-instagram"></i></a>
