--- a/index.html
+++ b/index.html
@@ -458,11 +458,11 @@
                         <p><i class="fa fa-envelope mr-2"></i>info@joymercylogistics.com</p>
                         <div class="d-flex justify-content-start mt-4">
                      <!--   <a class="btn btn-outline-light btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a> -->
-                            <a class="btn btn-outline-light btn-social mr-2" href="#"><i
+                            <a class="btn btn-outline-light btn-social mr-2" href="https://www.facebook.com/joymercylogistics"><i
                                     class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-outline-light btn-social mr-2" href="#"><i
                                     class="fab fa-linkedin-in"></i></a>
-                            <a class="btn btn-outline-light btn-social" href="#"><i class="fab fa-instagram"></i></a>
+                            <a class="btn btn-outline-light btn-social" href="https://instagram.com/joymercylogistics"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                     <div class="col-md-6 mb-5">
