--- a/blog.html
+++ b/blog.html
@@ -38,13 +38,13 @@
             </div>
             <div class="col-lg-6 text-center text-lg-right">
                 <div class="d-inline-flex align-items-center">
-                    <a class="text-white px-2" href="">
+                    <a class="text-white px-2" href="https://www.facebook.com/joymercylogistics">
                         <i class="fab fa-facebook-f"></i>
                     </a>
             <!--    <a class="text-white px-2" href="">
                         <i class="fab fa-twitter"></i>
                     </a> -->
-                    <a class="text-white px-2" href="">
+                    <a class="text-white px-2" href="https://www.linkedin.com/in/joymercy-logistics-759095274">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
                     <a class="text-white px-2" href="https://instagram.com/joymercylogistics">
@@ -349,9 +349,9 @@
                         <p><i class="fa fa-envelope mr-2"></i>info@joymercylogistics.com</p>
                         <div class="d-flex justify-content-start mt-4">
                   <!--      <a class="btn btn-outline-light btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a> -->
-                            <a class="btn btn-outline-light btn-social mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-light btn-social mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                            <a class="btn btn-outline-light btn-social" href="#"><i class="fab fa-instagram"></i></a>
+                            <a class="btn btn-outline-light btn-social mr-2" href="https://www.facebook.com/joymercylogistics"><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-outline-light btn-social mr-2" href="https://www.linkedin.com/in/joymercy-logistics-759095274"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-outline-light btn-social" href="https://instagram.com/joymercylogistics"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                     <div class="col-md-6 mb-5">
