--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
             </div>
             <div class="col-lg-6 text-center text-lg-right">
                 <div class="d-inline-flex align-items-center">
-                    <a class="text-white px-2" href="">
+                    <a class="text-white px-2" href="https://www.facebook.com/joymercylogistics">
                         <i class="fab fa-facebook-f"></i>
                     </a>
                 <!--<a class="text-white px-2" href="">
                         <i class="fab fa-twitter"></i> 
                     </a> -->
-                    <a class="text-white px-2" href="">
+                    <a class="text-white px-2" href="https://www.linkedin.com/in/joymercy-logistics-759095274">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
                     <a class="text-white px-2" href="https://instagram.com/joymercylogistics">
@@ -378,11 +378,11 @@
                             <div class="team-social d-flex align-items-center justify-content-center bg-primary">
                     <!--            <a class="btn btn-outline-dark btn-social mr-2" href="#"><i
                                         class="fab fa-twitter"></i></a> -->
-                                <a class="btn btn-outline-dark btn-social mr-2" href="#"><i
+                                <a class="btn btn-outline-dark btn-social mr-2" href="https://www.facebook.com/profile.php?id=100004685835150"><i
                                         class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-outline-dark btn-social mr-2" href="#"><i
+                                <a class="btn btn-outline-dark btn-social mr-2" href="https://www.linkedin.com/in/naveen-athinamoni-2571171a1"><i
                                         class="fab fa-linkedin-in"></i></a>
-                                <a class="btn btn-outline-dark btn-social" href="#"><i class="fab fa-instagram"></i></a>
+                                <a class="btn btn-outline-dark btn-social" href="https://www.instagram.com/naveen_767"><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
                     </div>
@@ -398,11 +398,11 @@
                             <div class="team-social d-flex align-items-center justify-content-center bg-primary">
                       <!--      <a class="btn btn-outline-dark btn-social mr-2" href="#"><i
                                         class="fab fa-twitter"></i></a> -->
-                                <a class="btn btn-outline-dark btn-social mr-2" href="#"><i
+                                <a class="btn btn-outline-dark btn-social mr-2" href="https://www.facebook.com/profile.php?id=100093064326317&mibextid=LQQJ4d"><i
                                         class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-outline-dark btn-social mr-2" href="#"><i
+                                <a class="btn btn-outline-dark btn-social mr-2" href="https://www.linkedin.com/in/kambhampati-rajesh-900349192"><i
                                         class="fab fa-linkedin-in"></i></a>
-                                <a class="btn btn-outline-dark btn-social" href="#"><i class="fab fa-instagram"></i></a>
+                                <a class="btn btn-outline-dark btn-social" href="https://instagram.com/raj__esh__rak"><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
                     </div>
@@ -418,11 +418,11 @@
                             <div class="team-social d-flex align-items-center justify-content-center bg-primary">
                       <!--      <a class="btn btn-outline-dark btn-social mr-2" href="#"><i
                                         class="fab fa-twitter"></i></a> -->
-                                <a class="btn btn-outline-dark btn-social mr-2" href="#"><i
+                                <a class="btn btn-outline-dark btn-social mr-2" href="https://www.facebook.com/profile.php?id=100092478167277"><i
                                         class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-outline-dark btn-social mr-2" href="#"><i
+                                <a class="btn btn-outline-dark btn-social mr-2" href="https://www.linkedin.com/in/prakash-gope-987317278"><i
                                         class="fab fa-linkedin-in"></i></a>
-                                <a class="btn btn-outline-dark btn-social" href="#"><i class="fab fa-instagram"></i></a>
+                                <a class="btn btn-outline-dark btn-social" href="https://instagram.com/prakash_vicky2804"><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
                     </div>
@@ -460,7 +460,7 @@
                      <!--   <a class="btn btn-outline-light btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a> -->
                             <a class="btn btn-outline-light btn-social mr-2" href="https://www.facebook.com/joymercylogistics"><i
                                     class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-light btn-social mr-2" href="#"><i
+                            <a class="btn btn-outline-light btn-social mr-2" href="https://www.linkedin.com/in/joymercy-logistics-759095274"><i
                                     class="fab fa-linkedin-in"></i></a>
                             <a class="btn btn-outline-light btn-social" href="https://instagram.com/joymercylogistics"><i class="fab fa-instagram"></i></a>
                         </div>
