--- a/service.html
+++ b/service.html
@@ -44,7 +44,7 @@
             <!--    <a class="text-white px-2" href="">
                         <i class="fab fa-twitter"></i>
                     </a> -->
-                    <a class="text-white px-2" href="">
+                    <a class="text-white px-2" href="https://www.linkedin.com/in/joymercy-logistics-759095274">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
                     <a class="text-white px-2" href="https://instagram.com/joymercylogistics">
@@ -256,7 +256,7 @@
                         <div class="d-flex justify-content-start mt-4">
                      <!--   <a class="btn btn-outline-light btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a> -->
                             <a class="btn btn-outline-light btn-social mr-2" href="https://www.facebook.com/joymercylogistics"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-light btn-social mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-outline-light btn-social mr-2" href="https://www.linkedin.com/in/joymercy-logistics-759095274"><i class="fab fa-linkedin-in"></i></a>
                             <a class="btn btn-outline-light btn-social" href="https://instagram.com/joymercylogistics"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
