--- a/about.html
+++ b/about.html
@@ -182,12 +182,12 @@
                                 <h5 class="font-weight-bold">PRASAD G</h5>
                                 <span>CHAIRMAN AND MANAGING DIRECTOR</span>
                             </div>
-                            <div class="team-social d-flex align-items-center justify-content-center bg-primary">
+                        <-- <div class="team-social d-flex align-items-center justify-content-center bg-primary">
                          <!--   <a class="btn btn-outline-dark btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a> -->
                                 <a class="btn btn-outline-dark btn-social mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-outline-dark btn-social mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
                                 <a class="btn btn-outline-dark btn-social" href="#"><i class="fab fa-instagram"></i></a>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
