--- a/about.html
+++ b/about.html
@@ -199,12 +199,12 @@
                                 <h5 class="font-weight-bold">NAVEEN A</h5>
                                 <span>MANAGING DIRECTOR</span>
                             </div>
-                            <div class="team-social d-flex align-items-center justify-content-center bg-primary">
-                     <!--       <a class="btn btn-outline-dark btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a> -->
+                       <!-- <div class="team-social d-flex align-items-center justify-content-center bg-primary">
+                                <a class="btn btn-outline-dark btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a> 
                                 <a class="btn btn-outline-dark btn-social mr-2" href="https://www.facebook.com/profile.php?id=100004685835150"><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-outline-dark btn-social mr-2" href="https://www.linkedin.com/in/naveen-athinamoni-2571171a1"><i class="fab fa-linkedin-in"></i></a>
                                 <a class="btn btn-outline-dark btn-social" href="https://www.instagram.com/naveen_767"><i class="fab fa-instagram"></i></a>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -216,12 +216,12 @@
                                 <h5 class="font-weight-bold">RAJESH K</h5>
                                 <span>HEAD OF THE OPERATIONS</span>
                             </div>
-                            <div class="team-social d-flex align-items-center justify-content-center bg-primary">
-                   <!--         <a class="btn btn-outline-dark btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a> -->
+                      <!--  <div class="team-social d-flex align-items-center justify-content-center bg-primary">
+                                <a class="btn btn-outline-dark btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a> 
                                 <a class="btn btn-outline-dark btn-social mr-2" href="https://www.facebook.com/profile.php?id=100093064326317&mibextid=LQQJ4d"><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-outline-dark btn-social mr-2" href="https://www.linkedin.com/in/kambhampati-rajesh-900349192"><i class="fab fa-linkedin-in"></i></a>
                                 <a class="btn btn-outline-dark btn-social" href="https://instagram.com/raj__esh__rak"><i class="fab fa-instagram"></i></a>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -233,12 +233,12 @@
                                 <h5 class="font-weight-bold">PRAKASH G</h5>
                                 <span>HEAD OF THE FINANCE</span>
                             </div>
-                            <div class="team-social d-flex align-items-center justify-content-center bg-primary">
-               <!--             <a class="btn btn-outline-dark btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a> -->
+                  <!--       <div class="team-social d-flex align-items-center justify-content-center bg-primary">
+                               <a class="btn btn-outline-dark btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a> -->
                                 <a class="btn btn-outline-dark btn-social mr-2" href="https://www.facebook.com/profile.php?id=100092478167277"><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-outline-dark btn-social mr-2" href="https://www.linkedin.com/in/prakash-gope-987317278"><i class="fab fa-linkedin-in"></i></a>
                                 <a class="btn btn-outline-dark btn-social" href="https://instagram.com/prakash_vicky2804"><i class="fab fa-instagram"></i></a>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
