--- a/about.html
+++ b/about.html
@@ -234,7 +234,7 @@
                                 <span>HEAD OF THE FINANCE</span>
                             </div>
                   <!--       <div class="team-social d-flex align-items-center justify-content-center bg-primary">
-                               <a class="btn btn-outline-dark btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a> -->
+                               <a class="btn btn-outline-dark btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a> 
                                 <a class="btn btn-outline-dark btn-social mr-2" href="https://www.facebook.com/profile.php?id=100092478167277"><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-outline-dark btn-social mr-2" href="https://www.linkedin.com/in/prakash-gope-987317278"><i class="fab fa-linkedin-in"></i></a>
                                 <a class="btn btn-outline-dark btn-social" href="https://instagram.com/prakash_vicky2804"><i class="fab fa-instagram"></i></a>
