--- a/about.html
+++ b/about.html
@@ -167,7 +167,7 @@
 
 
     <!-- Team Start -->
-    <div class="container-fluid pt-5">
+<!--    <div class="container-fluid pt-5">
         <div class="container">
             <div class="text-center pb-2">
                 <h6 class="text-primary text-uppercase font-weight-bold"></h6>
@@ -244,7 +244,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Team End -->
 
 
