--- a/about.html
+++ b/about.html
@@ -166,8 +166,8 @@
     <!-- Features End -->
 
 
-    <!-- Team Start -->
-<!--    <div class="container-fluid pt-5">
+    <!-- Team Start 
+    <div class="container-fluid pt-5">
         <div class="container">
             <div class="text-center pb-2">
                 <h6 class="text-primary text-uppercase font-weight-bold"></h6>
@@ -245,7 +245,7 @@
             </div>
         </div>
     </div> -->
-    <!-- Team End -->
+     Team End -->
 
 
     <!-- Footer Start -->
