--- a/about.html
+++ b/about.html
@@ -165,8 +165,8 @@
     </div>
     <!-- Features End -->
 
-
-    <!-- Team Start 
+<!--
+    <!-- Team Start -->
     <div class="container-fluid pt-5">
         <div class="container">
             <div class="text-center pb-2">
@@ -245,8 +245,8 @@
             </div>
         </div>
     </div> -->
-     Team End -->
-
+ <!--  Team End -->
+-->
 
     <!-- Footer Start -->
     <div class="container-fluid bg-dark text-white mt-5 py-5 px-sm-3 px-md-5">
