--- a/about.html
+++ b/about.html
@@ -165,9 +165,9 @@
     </div>
     <!-- Features End -->
 
-<!--
+
     <!-- Team Start -->
-    <div class="container-fluid pt-5">
+<!--    <div class="container-fluid pt-5">
         <div class="container">
             <div class="text-center pb-2">
                 <h6 class="text-primary text-uppercase font-weight-bold"></h6>
