--- a/about.html
+++ b/about.html
@@ -188,7 +188,7 @@
                                 <a class="btn btn-outline-dark btn-social mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
                                 <a class="btn btn-outline-dark btn-social" href="#"><i class="fab fa-instagram"></i></a>  
                             </div> -->
-                        </div>
+                 <!--       </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
@@ -204,7 +204,7 @@
                                 <a class="btn btn-outline-dark btn-social mr-2" href="https://www.facebook.com/profile.php?id=100004685835150"><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-outline-dark btn-social mr-2" href="https://www.linkedin.com/in/naveen-athinamoni-2571171a1"><i class="fab fa-linkedin-in"></i></a>
                                 <a class="btn btn-outline-dark btn-social" href="https://www.instagram.com/naveen_767"><i class="fab fa-instagram"></i></a>
-                            </div> -->
+                            </div> 
                         </div>
                     </div>
                 </div>
@@ -221,7 +221,7 @@
                                 <a class="btn btn-outline-dark btn-social mr-2" href="https://www.facebook.com/profile.php?id=100093064326317&mibextid=LQQJ4d"><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-outline-dark btn-social mr-2" href="https://www.linkedin.com/in/kambhampati-rajesh-900349192"><i class="fab fa-linkedin-in"></i></a>
                                 <a class="btn btn-outline-dark btn-social" href="https://instagram.com/raj__esh__rak"><i class="fab fa-instagram"></i></a>
-                            </div> -->
+                            </div> 
                         </div>
                     </div>
                 </div>
@@ -238,7 +238,7 @@
                                 <a class="btn btn-outline-dark btn-social mr-2" href="https://www.facebook.com/profile.php?id=100092478167277"><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-outline-dark btn-social mr-2" href="https://www.linkedin.com/in/prakash-gope-987317278"><i class="fab fa-linkedin-in"></i></a>
                                 <a class="btn btn-outline-dark btn-social" href="https://instagram.com/prakash_vicky2804"><i class="fab fa-instagram"></i></a>
-                            </div> -->
+                            </div> 
                         </div>
                     </div>
                 </div>
