--- a/about.html
+++ b/about.html
@@ -107,7 +107,9 @@
                 <div class="col-lg-7">
                     <h6 class="text-primary text-uppercase font-weight-bold">About Us</h6>
                     <h1 class="mb-4">Trusted Logistic Service Provider</h1>
-                    <p class="mb-4">At Joymercy Logistics, we are passionate about logistics. We believe that by providing top-quality transportation and logistics services, we can help businesses around the world thrive. Our team has years of combined experience in the industry, and we are committed to staying at the forefront of technological and logistical advancements to ensure that our clients receive the best service possible.</p>
+                    <p class="mb-4">At Joymercy Logistics, we are passionate about logistics. We believe that by providing top-quality transportation and logistics services, we can help businesses around the world thrive. Our team has years of combined experience in the industry, and we are committed to staying at the forefront of technological and logistical advancements to ensure that our clients receive the best service possible.
+		    <h1 class="mb-2">Profile</h1>
+		    </p>
                     <!-- <div class="d-flex align-items-center pt-2">
                         <button type="button" class="btn-play" data-toggle="modal"
                             data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-target="#videoModal">
