--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
 
 
     <!-- Team Start -->
-    <div class="container-fluid pt-5">
+<!--    <div class="container-fluid pt-5">
         <div class="container">
             <div class="text-center pb-2">
                 <h6 class="text-primary text-uppercase font-weight-bold"></h6>
@@ -363,7 +363,7 @@
                                 <a class="btn btn-outline-dark btn-social mr-2" href="#"><i
                                         class="fab fa-linkedin-in"></i></a>
                                 <a class="btn btn-outline-dark btn-social" href="#"><i class="fab fa-instagram"></i></a>
-                            </div> -->
+                            </div> 
                         </div>
                     </div>
                 </div>
@@ -383,7 +383,7 @@
                                 <a class="btn btn-outline-dark btn-social mr-2" href="https://www.linkedin.com/in/naveen-athinamoni-2571171a1"><i
                                         class="fab fa-linkedin-in"></i></a>
                                 <a class="btn btn-outline-dark btn-social" href="https://www.instagram.com/naveen_767"><i class="fab fa-instagram"></i></a>
-                            </div> -->
+                            </div> 
                         </div>
                     </div>
                 </div>
@@ -403,7 +403,7 @@
                                 <a class="btn btn-outline-dark btn-social mr-2" href="https://www.linkedin.com/in/kambhampati-rajesh-900349192"><i
                                         class="fab fa-linkedin-in"></i></a>
                                 <a class="btn btn-outline-dark btn-social" href="https://instagram.com/raj__esh__rak"><i class="fab fa-instagram"></i></a>
-                            </div> -->
+                            </div> 
                         </div>
                     </div>
                 </div>
@@ -423,13 +423,13 @@
                                 <a class="btn btn-outline-dark btn-social mr-2" href="https://www.linkedin.com/in/prakash-gope-987317278"><i
                                         class="fab fa-linkedin-in"></i></a>
                                 <a class="btn btn-outline-dark btn-social" href="https://instagram.com/prakash_vicky2804"><i class="fab fa-instagram"></i></a>
-                            </div> -->
+                            </div> 
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Team End -->
 
 
