--- a/invoice-generator.html
+++ b/invoice-generator.html
@@ -1,6 +1,8 @@
 <body id="form">
   <form>
 <header style="text-align: center; padding: 20px;">
+	 <link rel="stylesheet" href="/invoice-generator.css">
+    <script src="/invoice-generator.js"></script>
     <div style="display: flex; align-items: center; justify-content: center;">
         <div class="logo-container" style="margin-right: 20px; max-width: 100px;">
             <!-- Add your logo image here -->
